// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreview /> should render correctly project with participative step, without type 1`] = `
<Col
  bsClass="col"
  className="d-flex"
  componentClass="div"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <CardContainer
    className="project-preview"
    id="project-preview-project1"
  >
    <ProjectCover
      project={
        Object {
          "hasParticipativeStep": true,
          "id": "project1",
          "title": "project with participative step",
        }
      }
    />
    <ProjectPreviewBody
      project={
        Object {
          "hasParticipativeStep": true,
          "id": "project1",
          "title": "project with participative step",
        }
      }
    />
  </CardContainer>
</Col>
`;

exports[`<ProjectPreview /> should render correctly project without participative step (all projects have not participative steps) 1`] = `
<Col
  bsClass="col"
  className="d-flex"
  componentClass="div"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <CardContainer
    className="project-preview"
    id="project-preview-project1"
  >
    <ProjectType
      project={
        Object {
          "hasParticipativeStep": false,
          "id": "project1",
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step 2",
        }
      }
    />
    <ProjectCover
      project={
        Object {
          "hasParticipativeStep": false,
          "id": "project1",
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step 2",
        }
      }
    />
    <ProjectPreviewBody
      project={
        Object {
          "hasParticipativeStep": false,
          "id": "project1",
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step 2",
        }
      }
    />
  </CardContainer>
</Col>
`;

exports[`<ProjectPreview /> should render correctly project without participative step 1`] = `
<Col
  bsClass="col"
  className="d-flex"
  componentClass="div"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <CardContainer
    className="project-preview"
    id="project-preview-project1"
  >
    <ProjectType
      project={
        Object {
          "hasParticipativeStep": false,
          "id": "project1",
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step",
        }
      }
    />
    <ProjectCover
      project={
        Object {
          "hasParticipativeStep": false,
          "id": "project1",
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step",
        }
      }
    />
    <ProjectPreviewBody
      project={
        Object {
          "hasParticipativeStep": false,
          "id": "project1",
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step",
        }
      }
    />
  </CardContainer>
</Col>
`;
